# svd-algebra

./: .gitignore  LICENSE  Makefile  README.md  Relatorio.ipynb  pyproject.toml
exemples/: analyze_systems.py  compress_image.py
src/svd_algebra/: __init__.py  core.py
